# HODesignPatternsWithCpp

./: .gitignore
CRTP.StaticPolyMorphism.Chapter08/: CMakeLists.txt  function_call.C
Chapter05/: memory1.C
Chapter06/: CMakeLists.txt  smartptr.C
Local.BufferChapter10/: CMakeLists.txt  smartptr.C
MethodChaining.Arguments.Chapter09/: CMakeLists.txt  named_args.C
PreLearning/: CMakeLists.txt  templatedFunctions.cpp  templates.cpp  variadics.cpp
RAII.Chapter05/: CMakeLists.txt  mutex1.C
SFINAE.Chapter07/: CMakeLists.txt  a.out  deduction.cpp  sfinae3.C  sfinae4.C
ScopeGuard.Chapter11/: 03_raii.C
